[gd_scene load_steps=2 format=3 uid="uid://bjvy0v3gu14r"]

[ext_resource type="Script" path="res://src/main_menu.gd" id="1_epqrp"]

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_epqrp")
metadata/_edit_use_anchors_ = true

[node name="QuitButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 25.0
offset_top = -30.0
offset_right = 75.0
offset_bottom = -17.0
grow_vertical = 0
text = "QUIT
"

[node name="PlayButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -22.5
offset_top = -10.0
offset_right = 22.5
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
text = "PLAY
"

[node name="PlayCustomButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -55.0
offset_top = 30.0
offset_right = 70.0
offset_bottom = 55.0
grow_horizontal = 2
grow_vertical = 2
text = "Play Custom
"

[node name="CustomLevelEdit" type="TextEdit" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -260.0
offset_top = -75.0
offset_right = -31.0
offset_bottom = -24.0
grow_horizontal = 0
grow_vertical = 0
placeholder_text = "Enter custom level..."

[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="PlayCustomButton" to="." method="_on_play_custom_button_pressed"]
